--- a/Project_2/assets/styles/_nav.scss
+++ b/Project_2/assets/styles/_nav.scss
@@ -109,7 +109,8 @@ nav {
     }
 
     @media screen and(max-width:1220px) {
-        margin-left: -125px;
+        margin-left: 35px;
+        padding-bottom: 10px;
     }
 }
 
