--- a/Project_2/assets/styles/main.css
+++ b/Project_2/assets/styles/main.css
@@ -32,7 +32,6 @@ header {
   background-position: center;
   background-repeat: no-repeat;
   margin-bottom: 100px;
-  min-height: 100vh;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -69,7 +68,7 @@ header {
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    gap: 30px;
+    gap: 10px;
   }
 }
 @media screen and (max-width: 900px) {
@@ -315,7 +314,8 @@ nav li:hover a::before {
 }
 @media screen and (max-width: 1220px) {
   .header_icons {
-    margin-left: -125px;
+    margin-left: 35px;
+    padding-bottom: 10px;
   }
 }
 
@@ -460,6 +460,15 @@ nav li:hover a::before {
 .projects {
   margin-top: 89px;
 }
+.projects .project_image {
+  width: 100%;
+}
+@media screen and (max-width: 1024px) {
+  .projects .project_image {
+    margin: 0 auto;
+    width: 70%;
+  }
+}
 .projects img {
   position: relative;
   z-index: 10;
@@ -491,9 +500,11 @@ nav li:hover a::before {
   justify-content: space-between;
   gap: 70px;
 }
-.project_1 .project_image {
-  width: 100%;
-  height: 100%;
+@media screen and (max-width: 1024px) {
+  .project_1 {
+    flex-direction: column;
+    gap: 0;
+  }
 }
 @media screen and (max-width: 900px) {
   .project_1 {
@@ -548,6 +559,11 @@ nav li:hover a::before {
   overflow: hidden;
   outline: none;
 }
+@media screen and (max-width: 1024px) {
+  .project_details button {
+    margin-top: 10px;
+  }
+}
 .project_details button:hover {
   background: #55B7FF;
   border-color: #55B7FF;
@@ -593,6 +609,12 @@ nav li:hover a::before {
   font-size: 15px;
   font-style: italic;
 }
+@media screen and (max-width: 1024px) {
+  .project_details {
+    text-align: center;
+    padding-top: 30px;
+  }
+}
 @media screen and (max-width: 900px) {
   .project_details {
     padding: 0;
@@ -611,6 +633,12 @@ nav li:hover a::before {
 @media screen and (max-width: 900px) {
   .project_2 img {
     box-shadow: -10px -10px #7E5AFF;
+  }
+}
+@media screen and (max-width: 1024px) {
+  .project_2 {
+    flex-direction: column-reverse;
+    gap: 0;
   }
 }
 @media screen and (max-width: 900px) {
@@ -710,8 +738,18 @@ nav li:hover a::before {
 .article .slick-next {
   right: -85px;
 }
+@media screen and (max-width: 1024px) {
+  .article .slick-next {
+    right: -35px;
+  }
+}
 .article .slick-prev {
   left: -100px;
+}
+@media screen and (max-width: 1024px) {
+  .article .slick-prev {
+    left: -35px;
+  }
 }
 .article button.slick-arrow:hover {
   background: #fff;
@@ -758,7 +796,6 @@ nav li:hover a::before {
   font-size: 22px;
 }
 .article_details p {
-  margin-bottom: 39px;
   color: #2c4058;
   font-size: 18px;
   font-weight: 400;
@@ -958,7 +995,10 @@ nav li:hover a::before {
   transform: scale(1.2);
 }
 
-#name {
+#name:hover,
+#name:active,
+#email:hover,
+#email:active {
   border-bottom: 1px solid #000;
 }
 
