--- a/Project_2/assets/styles/_nav.css
+++ b/Project_2/assets/styles/_nav.css
@@ -94,7 +94,8 @@ nav li:hover a::before {
 }
 @media screen and (max-width: 1220px) {
   .header_icons {
-    margin-left: -125px;
+    margin-left: 35px;
+    padding-bottom: 10px;
   }
 }
 
