--- a/Project_2/assets/styles/_section.scss
+++ b/Project_2/assets/styles/_section.scss
@@ -34,6 +34,15 @@
 .projects {
     margin-top: 89px;
 
+    .project_image {
+        width: 100%;
+
+        @media screen and(max-width:1024px) {
+            margin: 0 auto;
+            width: 70%;
+        }
+    }
+
     img {
         position: relative;
         z-index: 10;
@@ -65,9 +74,12 @@
     justify-content: space-between;
     gap: 70px;
 
-    .project_image {
-        width: 100%;
-        height: 100%;
+
+
+    @media screen and(max-width:1024px) {
+        flex-direction: column;
+        gap: 0;
+
     }
 
     @media screen and(max-width:900px) {
@@ -126,6 +138,10 @@
         overflow: hidden;
         outline: none;
 
+        @media screen and(max-width:1024px) {
+            margin-top: 10px;
+        }
+
         &:hover {
             background: $tertiary-color;
             border-color: $tertiary-color;
@@ -182,6 +198,11 @@
         }
     }
 
+    @media screen and(max-width:1024px) {
+        text-align: center;
+        padding-top: 30px;
+    }
+
     @media screen and(max-width:900px) {
         padding: 0;
         margin-top: 30px;
@@ -199,6 +220,12 @@
         @media screen and(max-width:900px) {
             box-shadow: -10px -10px $commerce_background;
         }
+    }
+
+    @media screen and(max-width:1024px) {
+        flex-direction: column-reverse;
+        gap: 0;
+
     }
 
     @media screen and(max-width:900px) {
@@ -307,10 +334,18 @@
 
     .slick-next {
         right: -85px;
+
+        @media screen and(max-width:1024px) {
+            right: -35px;
+        }
     }
 
     .slick-prev {
         left: -100px;
+
+        @media screen and(max-width:1024px) {
+            left: -35px;
+        }
     }
 
     button.slick-arrow {
@@ -366,7 +401,7 @@
     }
 
     p {
-        margin-bottom: 39px;
+        // margin-bottom: 39px;
         color: $secondary-color;
         font-size: $font_size_3;
         font-weight: 400;
@@ -596,7 +631,10 @@
 }
 
 
-#name {
+#name:hover,
+#name:active,
+#email:hover,
+#email:active {
     border-bottom: 1px solid #000;
 }
 
