--- a/Project_2/assets/styles/_section.css
+++ b/Project_2/assets/styles/_section.css
@@ -435,7 +435,7 @@
 .main_gallery {
   padding-top: 89px;
   margin: 0 auto;
-  width: 100%;
+  width: 90%;
   max-width: 1170px;
 }
 
@@ -448,6 +448,13 @@
 }
 .grid_gallery .gallery_image:first-of-type {
   grid-area: 1/1/3/3;
+}
+@media screen and (max-width: 1024px) {
+  .grid_gallery img {
+    display: block;
+    width: 100%;
+    height: 100%;
+  }
 }
 
 .see_more_button {
