--- a/Project_2/assets/styles/_section.scss
+++ b/Project_2/assets/styles/_section.scss
@@ -482,7 +482,7 @@
 .main_gallery {
     padding-top: 89px;
     margin: 0 auto;
-    width: 100%;
+    width: 90%;
     max-width: 1170px;
 }
 
@@ -496,7 +496,17 @@
     .gallery_image:first-of-type {
         grid-area: 1/1/3/3;
     }
+
+    img {
+        @media screen and(max-width:1024px) {
+            display: block;
+            width: 100%;
+            height: 100%;
+        }
+    }
 }
+
+
 
 .see_more_button {
     display: flex;
